# QVGDM

./: README.md  config.toml  pyproject.toml  questions.json  wsgi.py
qvgdm/: __main__.py  game.py  players.py  questions.py  render.py  server.py
qvgdm/assets/: style.css
qvgdm/pages/: game.py  guests.py  presenter.py
